Adding in passwordrules.

--- a/japaneseDemo.html
+++ b/japaneseDemo.html
@@ -33,11 +33,11 @@
 					<h2>日本語で</h2>
 					<div class="fieldHolder">
 						<label for="pword1">新しいパスワード:</label>
-						<input name="pword1" id="pword1" type="password" class="newPassword notPassword minchars maxchars digit max-consecutive nospaces" data-minchars="8" data-maxchars="10" data-match="pword2" data-passwordRequirementsDiv="passwordRequirementsJp" data-max-consecutive="5">
+						<input name="pword1" id="pword1" type="password" class="nbpr-new-password notPassword minchars maxchars digit max-consecutive nospaces" data-minchars="8" data-maxchars="10" data-match="pword2" data-passwordRequirementsDiv="passwordRequirementsJp" data-max-consecutive="5">
 					</div>
 					<div class="fieldHolder">
 						<label for="pword2">パスワードを認証する:</label>
-						<input name="pword2" id="pword2" type="password" class="confirmPassword" data-match="pword1">
+						<input name="pword2" id="pword2" type="password" class="nbpr-confirm-password" data-match="pword1">
 					</div>
 					<div id="passwordRequirementsJp"></div>
 					<div class="fieldHolder">
@@ -64,11 +64,11 @@
 
 &lt;div class="fieldHolder"&gt;
 	&lt;label for="pword1"&gt;新しいパスワード:&lt;/label&gt;
-	&lt;input name="pword1" id="pword1" type="password" class="newPassword notPassword minchars maxchars digit max-consecutive nospaces" data-minchars="8" data-maxchars="10" data-match="pword2" data-passwordRequirementsDiv="passwordRequirementsEn"&gt;
+	&lt;input name="pword1" id="pword1" type="password" class="nbpr-new-password notPassword minchars maxchars digit max-consecutive nospaces" data-minchars="8" data-maxchars="10" data-match="pword2" data-passwordRequirementsDiv="passwordRequirementsEn"&gt;
 &lt;/div&gt;
 &lt;div class="fieldHolder"&gt;
 	&lt;label for="pword2"&gt;パスワードを認証する:&lt;/label&gt;
-	&lt;input name="pword2" id="pword2" type="password" class="confirmPassword" data-match="pword1"&gt;
+	&lt;input name="pword2" id="pword2" type="password" class="nbpr-confirm-password" data-match="pword1"&gt;
 &lt;/div&gt;
 &lt;div id="passwordRequirementsEn"&gt;&lt;/div&gt;
 						</pre>
