--- a/nordburgPwReqTest-Demo.html
+++ b/nordburgPwReqTest-Demo.html
@@ -28,11 +28,11 @@
 					<h2>In English</h2>
 					<div class="fieldHolder">
 						<label for="pword1">New Password:</label>
-						<input name="pword1" id="pword1" type="password" class="newPassword minlength maxlength lowercase uppercase special-char notPassword digit max-consecutive nospaces" data-minchars="8" data-maxchars="10" data-match="pword2" data-passwordRequirementsDiv="passwordRequirementsEn" aria-describedby="theH1" data-max-consecutive="4" autocomplete="off">
+						<input name="pword1" id="pword1" type="password" class="nbpr-new-password minlength maxlength lowercase uppercase special-char notPassword digit max-consecutive nospaces" data-minchars="8" data-maxchars="10" data-match="pword2" data-passwordRequirementsDiv="passwordRequirementsEn" aria-describedby="theH1" data-max-consecutive="4" autocomplete="off">
 					</div>
 					<div class="fieldHolder">
 						<label for="pword2">Confirm Password:</label>
-						<input name="pword2" id="pword2" type="password" class="confirmPassword" data-match="pword1" autocomplete="off">
+						<input name="pword2" id="pword2" type="password" class="nbpr-confirm-password" data-match="pword1" autocomplete="off">
 					</div>
 					<div id="passwordRequirementsEn"></div>
 					<div class="fieldHolder">
@@ -51,11 +51,11 @@
 
 &lt;div class="fieldHolder"&gt;
 	&lt;label for="pword1"&gt;Password:&lt;/label&gt;
-	&lt;input name="pword1" id="pword1" type="password" class="newPassword lowercase uppercase special-char digit max-consecutive nospaces" data-minchars="8" data-maxchars="10" data-match="pword2" data-passwordRequirementsDiv="passwordRequirementsEn" aria-describedby="theH1" data-max-consecutive="4" autocomplete="off"&gt;
+	&lt;input name="pword1" id="pword1" type="password" class="nbpr-new-password lowercase uppercase special-char digit max-consecutive nospaces" data-minchars="8" data-maxchars="10" data-match="pword2" data-passwordRequirementsDiv="passwordRequirementsEn" aria-describedby="theH1" data-max-consecutive="4" autocomplete="off"&gt;
 &lt;/div&gt;
 &lt;div class="fieldHolder"&gt;
 	&lt;label for="pword2"&gt;Confirm Password:&lt;/label&gt;
-	&lt;input name="pword2" id="pword2" type="password" class="confirmPassword" data-match="pword1"&gt;
+	&lt;input name="pword2" id="pword2" type="password" class="nbpr-confirm-password" data-match="pword1"&gt;
 &lt;/div&gt;
 &lt;div id="passwordRequirementsEn"&gt;&lt;/div&gt;
 						</pre>
@@ -67,11 +67,11 @@
 					<div id="passwordRequirementsFr" class="req-pos-before"></div>
 					<div class="fieldHolder">
 						<label for="pword3">Nouveau mot de passe :</label>
-						<input name="pword3" id="pword3" type="password" class="notPassword maxchars minchars newPassword lowercase uppercase special-char digit pasMotdepasse max-consecutive" minlength="4" data-minchars="6" data-max-consecutive="5" data-match="pword4"  data-maxchars="20" maxlength="21" data-passwordRequirementsDiv="passwordRequirementsFr">
+						<input name="pword3" id="pword3" type="password" class="notPassword maxchars minchars nbpr-new-password lowercase uppercase special-char digit pasMotdepasse max-consecutive" minlength="4" data-minchars="6" data-max-consecutive="5" data-match="pword4"  data-maxchars="20" maxlength="21" data-passwordRequirementsDiv="passwordRequirementsFr">
 					</div>
 					<div class="fieldHolder">
 						<label for="pword4">Confirmez le mot de passe :</label>
-						<input name="pword4" id="pword4" type="password" class="confirmPassword" data-match="pword3">
+						<input name="pword4" id="pword4" type="password" class="nbpr-confirm-password" data-match="pword3">
 					</div>
 					<div class="fieldHolder">
 						<input value="Submit" id="submitBtn2" type="button">
@@ -83,11 +83,11 @@
 ...
 &lt;div class="fieldHolder"&gt;
 	&lt;label for="pword3"&gt;Mot de passe :&lt;/label&gt;
-	&lt;input name="pword3" id="pword3" type="password" class="notPassword maxchars minchars newPassword lowercase uppercase special-char digit pasMotdepasse max-consecutive" minlength="4" data-minchars="6" data-max-consecutive="6" data-match="pword4"  data-maxchars="20" maxlength="21" data-passwordRequirementsDiv="passwordRequirementsFr"&gt;
+	&lt;input name="pword3" id="pword3" type="password" class="notPassword maxchars minchars nbpr-new-password lowercase uppercase special-char digit pasMotdepasse max-consecutive" minlength="4" data-minchars="6" data-max-consecutive="6" data-match="pword4"  data-maxchars="20" maxlength="21" data-passwordRequirementsDiv="passwordRequirementsFr"&gt;
 &lt;/div&gt;
 &lt;div class="fieldHolder"&gt;
 	&lt;label for="pword4"&gt;Confirmez le mot de passe :&lt;/label&gt;
-	&lt;input name="pword4" id="pword4" type="password" class="confirmPassword" data-match="pword3"&gt;
+	&lt;input name="pword4" id="pword4" type="password" class="nbpr-confirm-password" data-match="pword3"&gt;
 &lt;/div&gt;
 </pre>
 					</details>
