Ugh.  Got some other stuff working in IE.  I hope this doesn't mess things up too badly.

--- a/nordburgPwReqTest-Demo.html
+++ b/nordburgPwReqTest-Demo.html
@@ -131,7 +131,7 @@
 					<dd>Everything works as it should, including <code>lang</code> attributes.  A screen reader user shouldn't experience any barriers beyond the inherent complixity of the process.</dd>
 					<dt class="most-support">Mostly supported</dt>
 					<dd>Most things will work as they should, but there may be something that's not right which could be part of how the screen reader and/or operating system work, such as not respecting the <code>lang</code> attributes.  My results could be because I don't have French properly downloaded or installed on my OS or SR.  But this is mostly an edge case.</dd>
-					<dt class="partial-support">Partial support</dd>
+					<dt class="partial-support">Partial support</dt>
 					<dd>Some aspects work.  Some don't.  A screen reader user may be able to find workarounds, for example if not all password requirements are read in a top-down reading, but they are when the input takes focus.</dd>
 					<dt class="no-support">No support</dt>
 					<dd>Not a thing in that test works.  A screen reader user will face a signifiant barrier.  The thing just doesn't work.</dd>
