Gotta test iOS for special characters.

--- a/nordburgPwReqTest-Demo.html
+++ b/nordburgPwReqTest-Demo.html
@@ -11,6 +11,7 @@
 	<body>
 		<header>
 		<h1 id="theH1">Nordburg Password Requirements Test/Demo Page</h1>
+		<p>Try 💩 &nbsp; ✓ &nbsp; 👍 &nbsp; ⁿ/ₐ &nbsp; 🤷</p>
 		</header>
 		<main>
 			<div id="mainContent">
