--- a/japaneseDemo.html
+++ b/japaneseDemo.html
@@ -64,7 +64,7 @@
 
 &lt;div class="fieldHolder"&gt;
 	&lt;label for="pword1"&gt;新しいパスワード:&lt;/label&gt;
-	&lt;input name="pword1" id="pword1" type="password" class="nbpr-new-password notPassword minchars maxchars digit max-consecutive nospaces" data-minchars="8" data-maxchars="10" data-match="pword2" data-data-password-requirements-container="passwordRequirementsEn"&gt;
+	&lt;input name="pword1" id="pword1" type="password" class="nbpr-new-password notPassword minchars maxchars digit max-consecutive nospaces" data-minchars="8" data-maxchars="10" data-match="pword2" data-data-password-requirements-container="passwordRequirementsJp"&gt;
 &lt;/div&gt;
 &lt;div class="fieldHolder"&gt;
 	&lt;label for="pword2"&gt;パスワードを認証する:&lt;/label&gt;
