--- a/nordburgPwReqTest-Demo.html
+++ b/nordburgPwReqTest-Demo.html
@@ -73,7 +73,7 @@
 					<div id="passwordRequirementsFr" class="req-pos-before"></div>
 					<div class="fieldHolder">
 						<label for="pword3">Nouveau mot de passe :</label>
-						<input name="pword3" id="pword3" type="password" class="maxchars minchars nospaces nbpr-new-password lowercase uppercase special-char special unicode ascii-printable digit pasMotdepasse max-consecutive" minlength="4" data-minchars="6" data-max-consecutive="5" data-match="pword4"  data-maxchars="20" maxlength="21" data-password-requirements-container="passwordRequirementsFr">
+						<input name="pword3" id="pword3" type="password" class="notPassword maxchars minchars nbpr-new-password lowercase uppercase special-char digit pasMotdepasse max-consecutive" minlength="4" data-minchars="6" data-max-consecutive="5" data-match="pword4"  data-maxchars="20" maxlength="21" data-password-requirements-container="passwordRequirementsFr">
 					</div>
 					<div class="fieldHolder">
 						<label for="pword4">Confirmez le mot de passe :</label>
